Changes for DateTime::Set

0.0805
- optimizes intersection of recurrence with span

0.0802
- internal 'S::I' recurrence class

- small fix in DT::Set clone()
- DateTime::Set uses DateTime infinity constants; 
  max and min now return DateTime::Infinite::Future/Past objects.

- DateTime::Span uses DateTime infinity constants; 
  max and min now return DateTime::Infinite::Future/Past objects.
  Docs update to explain 'max()' value when a span is built using 'before'.

- added method set_time_zone()
- clone() is documented

0.08     2003-05-30
- recurrence set intersection uses 'current'
- fixed a number of methods in DateTime::Span, including intersection,
intersects, contains, union, and complement, all of which called the
non-existent DateTime::Set->new method.  Dave Rolsky.

0.07     2003-05-23
- some tweaking on intersection, union, and in the recurrence generator.
- more tests

0.06     2003-05-14
- added 'use warnings' in some tests, added DateTime 0.12 prereq.

0.04     2003-05-12
- change "closest" code to avoid duration comparison

0.03     2003-04-27
- fixes in Set.pm as_list, span.
- iterator accepts 'span' parameters.  Ben Bennett
- remove deprecated DateTime::Set->new and DateTime::SpanSet->new.  Dave Rolsky
- requires Set::Infinite 0.49

0.02     2003-04-20
- removed some calls to 'new'
- added many methods from DT::Event::Recurrence
- add 'span' parameter to as_list
- from_recurrence now accepts next + previous

0.01     2003-04-19

- first "official" release.
- implemented DateTime::SpanSet->from_sets and
  DateTime::SpanSet->from_set_and_duration
- Many doc tweaks.  Dave Rolsky
- DateTime::Span->duration and DateTime::SpanSet->duration now return
infinity instead of undef for infinite spans.  Dave Rolsky
- Added DateTime::SpanSet->empty_set.  Dave Rolsky

0.00_20  2003-04-10

- Docs for DateTime::SpanSet API 
  (not implemented)
- DateTime::Span API: 
  from_datetime_and_duration, from_datetimes


0.00_18  2003-03-25

- changes docs, changed API